--- a/index.html
+++ b/index.html
@@ -14,16 +14,79 @@
         </header>
         <main>
             <section class="profile">
-                <img src="./images/profile/profile__avatar.svg" alt="аватарка" class="profile__avatar">
                 <div class="profile__info">
+                    <img src="./images/profile/profile__avatar.svg" alt="аватарка" class="profile__avatar">
                     <div class="profile__edit">
-                        <h1 class="profile__name">Жак-Ив Кусто</h1>
-                        <button class="profile__button"></button>
+                        <div class="profile__row">
+                            <h1 class="profile__name">Жак-Ив Кусто</h1>
+                            <button  class="profile__button-edit"></button>
+                        </div>
+                        <p class="profile__status">Исследователь океана</p>
+                    </div>
+                </div>
+                <button class="profile__button"></button>
+            </section>
+            <section class="elements">
+                <div class="elements__card">
+                    <img src="./images/elements/card1.jpg" alt="Карачаевск" class="elements__image">
+                    <div class="elements__signature">
+                        <p class="elements__title">Санкт-Петербург</p>
+                        <img src="./images/elements/heard.svg" alt="лайк" class="elements__like">
+                    </div>
+                </div>
+                <div class="elements__card">
+                    <img src="./images/elements/card2.jpg" alt="Гора Эльбрус" class="elements__image">
+                    <div class="elements__signature">
+                        <p class="elements__title">Москва</p>
+                        <img src="./images/elements/heard.svg" alt="лайк" class="elements__like">
+                    </div>
+                </div>
+                <div class="elements__card">
+                    <img src="./images/elements/card3.jpg" alt="Домбай" class="elements__image">
+                    <div class="elements__signature">
+                        <p class="elements__title">Нижний Новгород</p>
+                        <img src="./images/elements/heard.svg" alt="лайк" class="elements__like">
+                    </div>
+                </div>
+                <div class="elements__card">
+                    <img src="./images/elements/card4.jpg" alt="Гора Эльбрус" class="elements__image">
+                    <div class="elements__signature">
+                        <p class="elements__title">Сочи</p>
+                        <img src="./images/elements/heard.svg" alt="лайк" class="elements__like">
+                    </div>
+                </div>
+                <div class="elements__card">
+                    <img src="./images/elements/card5.jpg" alt="Домбай" class="elements__image">
+                    <div class="elements__signature">
+                        <p class="elements__title">Домбай</p>
+                        <img src="./images/elements/heard.svg" alt="лайк" class="elements__like">
+                    </div>
+                </div>
+                <div class="elements__card">
+                    <img src="./images/elements/card6.jpg" alt="Карачаевск" class="elements__image">
+                    <div class="elements__signature">
+                        <p class="elements__title">Альпы</p>
+                        <img src="./images/elements/heard.svg" alt="лайк" class="elements__like">
                     </div>
                 </div>
             </section>
         </main>
-        <footer class="footer"></footer>
+        <footer class="footer">
+            <h2 class="footer__text">© 2020 Mesto Russia</h2>
+        </footer>
     </div>
+    <section class="popup popup__opened">
+            <form class="popup__container">
+                <h2 class="popup__title">Редактировать профиль</h2>
+                    <div class="popup__text">
+                        <input type="text" value="Жак-Ив Кусто" class="popup__name">
+                        <input type="text" value="Исследователь океана" class="popup__status">
+                    </div>
+                <button class="popup__button" type="submit">Сохранить</button>
+                <button class="popup__close" type="button"></button>
+            </form>
+        </form>
+    </section>
+    <script src="./index.js"></script>
 </body>
 </html>
