--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h2 class="footer__text">© 2020 Mesto Russia</h2>
         </footer>
     </div>
-    <section class="popup popup__opened">
+    <section class="popup popup_opened">
             <form class="popup__container">
                 <h2 class="popup__title">Редактировать профиль</h2>
                     <div class="popup__text">
