Внес все правки ревью по index.html

--- a/index.html
+++ b/index.html
@@ -19,69 +19,67 @@
                     <div class="profile__edit">
                         <div class="profile__row">
                             <h1 class="profile__name">Жак-Ив Кусто</h1>
-                            <button  class="profile__button-edit"></button>
+                            <button  class="profile__button-edit" type="button"></button>
                         </div>
                         <p class="profile__status">Исследователь океана</p>
                     </div>
                 </div>
-                <button class="profile__button"></button>
+                <button class="profile__button" type="button"></button>
             </section>
             <section class="elements">
                 <div class="elements__card">
-                    <img src="./images/elements/card1.jpg" alt="Карачаевск" class="elements__image">
+                    <img src="./images/elements/card1.jpg" alt="Санкт-Петербург" class="elements__image">
                     <div class="elements__signature">
-                        <p class="elements__title">Санкт-Петербург</p>
-                        <img src="./images/elements/heard.svg" alt="лайк" class="elements__like">
+                        <h2 class="elements__title">Санкт-Петербург</h2>
+                        <button class="elements__like" type="button"></button>
                     </div>
                 </div>
                 <div class="elements__card">
-                    <img src="./images/elements/card2.jpg" alt="Гора Эльбрус" class="elements__image">
+                    <img src="./images/elements/card2.jpg" alt="Москва" class="elements__image">
                     <div class="elements__signature">
-                        <p class="elements__title">Москва</p>
-                        <img src="./images/elements/heard.svg" alt="лайк" class="elements__like">
+                        <h2 class="elements__title">Москва</h2>
+                        <button class="elements__like" type="button"></button>
                     </div>
                 </div>
                 <div class="elements__card">
-                    <img src="./images/elements/card3.jpg" alt="Домбай" class="elements__image">
+                    <img src="./images/elements/card3.jpg" alt="Нижний Новгород" class="elements__image">
                     <div class="elements__signature">
-                        <p class="elements__title">Нижний Новгород</p>
-                        <img src="./images/elements/heard.svg" alt="лайк" class="elements__like">
+                        <h2 class="elements__title">Нижний Новгород</h2>
+                        <button class="elements__like" type="button"></button>
                     </div>
                 </div>
                 <div class="elements__card">
-                    <img src="./images/elements/card4.jpg" alt="Гора Эльбрус" class="elements__image">
+                    <img src="./images/elements/card4.jpg" alt="Сочи" class="elements__image">
                     <div class="elements__signature">
-                        <p class="elements__title">Сочи</p>
-                        <img src="./images/elements/heard.svg" alt="лайк" class="elements__like">
+                        <h2 class="elements__title">Сочи</h2>
+                        <button class="elements__like" type="button"></button>
                     </div>
                 </div>
                 <div class="elements__card">
                     <img src="./images/elements/card5.jpg" alt="Домбай" class="elements__image">
                     <div class="elements__signature">
-                        <p class="elements__title">Домбай</p>
-                        <img src="./images/elements/heard.svg" alt="лайк" class="elements__like">
+                        <h2 class="elements__title">Домбай</h2>
+                        <button class="elements__like" type="button"></button>
                     </div>
                 </div>
                 <div class="elements__card">
-                    <img src="./images/elements/card6.jpg" alt="Карачаевск" class="elements__image">
+                    <img src="./images/elements/card6.jpg" alt="Альпы" class="elements__image">
                     <div class="elements__signature">
-                        <p class="elements__title">Альпы</p>
-                        <img src="./images/elements/heard.svg" alt="лайк" class="elements__like">
+                        <h6 class="elements__title">Альпы</h6>
+                        <button class="elements__like" type="button"></button>
                     </div>
                 </div>
             </section>
         </main>
         <footer class="footer">
-            <h2 class="footer__text">© 2020 Mesto Russia</h2>
+            <h4 class="footer__text">© 2020 Mesto Russia</h4>
         </footer>
     </div>
     <section class="popup popup_opened">
-            <form class="popup__container">
-                <h2 class="popup__title">Редактировать профиль</h2>
-                    <div class="popup__text">
-                        <input type="text" value="Жак-Ив Кусто" class="popup__name">
-                        <input type="text" value="Исследователь океана" class="popup__status">
-                    </div>
+            <form class="popup__container" name="form1">
+                <h3 class="popup__title">Редактировать профиль</h3>
+                        <input type="text" value="Жак-Ив Кусто" class="popup__input" name="form1__name">
+                        <input type="text" value="Исследователь океана" class="popup__input" name="form1__status">
                 <button class="popup__button" type="submit">Сохранить</button>
                 <button class="popup__close" type="button"></button>
             </form>
