--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <div class="profile__edit">
                         <div class="profile__row">
                             <h1 class="profile__name">Жак-Ив Кусто</h1>
-                            <button  class="profile__button-edit" type="button"></button>
+                            <button  class="profile__redact" type="button"></button>
                         </div>
                         <p class="profile__status">Исследователь океана</p>
                     </div>
@@ -84,6 +84,6 @@
                 <button class="popup__close" type="button"></button>
             </form>
     </section>
-    <script src="./index.js"></script>
+    <script src="./scripts/index.js"></script>
 </body>
 </html>
