Исправления для ревью №3

--- a/index.html
+++ b/index.html
@@ -1,89 +1,89 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./pages/index.css">
-    <title>Mesto</title>
-</head>
-<body>
-    <div class="page">
-        <header class="header">
+   <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="./pages/index.css">
+      <title>Mesto</title>
+   </head>
+   <body>
+      <div class="page">
+         <header class="header">
             <img src="./images/header/header__logo.svg" alt="логотип хедер" class="header__logo">
-        </header>
-        <main>
+         </header>
+         <main>
             <section class="profile">
-                <div class="profile__info">
-                    <img src="./images/profile/profile__avatar.svg" alt="аватарка" class="profile__avatar">
-                    <div class="profile__edit">
-                        <div class="profile__row">
-                            <h1 class="profile__name">Жак-Ив Кусто</h1>
-                            <button  class="profile__redact" type="button"></button>
-                        </div>
-                        <p class="profile__status">Исследователь океана</p>
-                    </div>
-                </div>
-                <button class="profile__button" type="button"></button>
+               <div class="profile__info">
+                  <img src="./images/profile/profile__avatar.svg" alt="аватарка" class="profile__avatar">
+                  <div class="profile__edit">
+                     <div class="profile__row">
+                        <h1 class="profile__name">Жак-Ив Кусто</h1>
+                        <button  class="profile__redact" type="button"></button>
+                     </div>
+                     <p class="profile__status">Исследователь океана</p>
+                  </div>
+               </div>
+               <button class="profile__button" type="button"></button>
             </section>
             <section class="elements">
-                <div class="elements__card">
-                    <img src="./images/elements/card1.jpg" alt="Санкт-Петербург" class="elements__image">
-                    <div class="elements__signature">
-                        <h2 class="elements__title">Санкт-Петербург</h2>
-                        <button class="elements__like" type="button"></button>
-                    </div>
-                </div>
-                <div class="elements__card">
-                    <img src="./images/elements/card2.jpg" alt="Москва" class="elements__image">
-                    <div class="elements__signature">
-                        <h2 class="elements__title">Москва</h2>
-                        <button class="elements__like" type="button"></button>
-                    </div>
-                </div>
-                <div class="elements__card">
-                    <img src="./images/elements/card3.jpg" alt="Нижний Новгород" class="elements__image">
-                    <div class="elements__signature">
-                        <h2 class="elements__title">Нижний Новгород</h2>
-                        <button class="elements__like" type="button"></button>
-                    </div>
-                </div>
-                <div class="elements__card">
-                    <img src="./images/elements/card4.jpg" alt="Сочи" class="elements__image">
-                    <div class="elements__signature">
-                        <h2 class="elements__title">Сочи</h2>
-                        <button class="elements__like" type="button"></button>
-                    </div>
-                </div>
-                <div class="elements__card">
-                    <img src="./images/elements/card5.jpg" alt="Домбай" class="elements__image">
-                    <div class="elements__signature">
-                        <h2 class="elements__title">Домбай</h2>
-                        <button class="elements__like" type="button"></button>
-                    </div>
-                </div>
-                <div class="elements__card">
-                    <img src="./images/elements/card6.jpg" alt="Альпы" class="elements__image">
-                    <div class="elements__signature">
-                        <h2 class="elements__title">Альпы</h2>
-                        <button class="elements__like" type="button"></button>
-                    </div>
-                </div>
+               <div class="elements__card">
+                  <img src="./images/elements/card1.jpg" alt="Санкт-Петербург" class="elements__image">
+                  <div class="elements__signature">
+                     <h2 class="elements__title">Санкт-Петербург</h2>
+                     <button class="elements__like" type="button"></button>
+                  </div>
+               </div>
+               <div class="elements__card">
+                  <img src="./images/elements/card2.jpg" alt="Москва" class="elements__image">
+                  <div class="elements__signature">
+                     <h2 class="elements__title">Москва</h2>
+                     <button class="elements__like" type="button"></button>
+                  </div>
+               </div>
+               <div class="elements__card">
+                  <img src="./images/elements/card3.jpg" alt="Нижний Новгород" class="elements__image">
+                  <div class="elements__signature">
+                     <h2 class="elements__title">Нижний Новгород</h2>
+                     <button class="elements__like" type="button"></button>
+                  </div>
+               </div>
+               <div class="elements__card">
+                  <img src="./images/elements/card4.jpg" alt="Сочи" class="elements__image">
+                  <div class="elements__signature">
+                     <h2 class="elements__title">Сочи</h2>
+                     <button class="elements__like" type="button"></button>
+                  </div>
+               </div>
+               <div class="elements__card">
+                  <img src="./images/elements/card5.jpg" alt="Домбай" class="elements__image">
+                  <div class="elements__signature">
+                     <h2 class="elements__title">Домбай</h2>
+                     <button class="elements__like" type="button"></button>
+                  </div>
+               </div>
+               <div class="elements__card">
+                  <img src="./images/elements/card6.jpg" alt="Альпы" class="elements__image">
+                  <div class="elements__signature">
+                     <h2 class="elements__title">Альпы</h2>
+                     <button class="elements__like" type="button"></button>
+                  </div>
+               </div>
             </section>
-        </main>
-        <footer class="footer">
+         </main>
+         <footer class="footer">
             <h4 class="footer__text">© 2023 Mesto Russia</h4>
-        </footer>
-    </div>
-    <section class="popup popup_opened">
-            <form class="popup__container" name="form1">
-                <h3 class="popup__title">Редактировать профиль</h3>
-                        <input type="text" value="Жак-Ив Кусто" class="popup__input" name="form1__name">
-                        <input type="text" value="Исследователь океана" class="popup__input" name="form1__status">
-                <button class="popup__button" type="submit">Сохранить</button>
-                <button class="popup__close" type="button"></button>
-            </form>
-    </section>
-    <script src="./scripts/index.js"></script>
-</body>
+         </footer>
+      </div>
+      <section class="popup">
+         <form class="popup__container" name="form1">
+            <h3 class="popup__title">Редактировать профиль</h3>
+            <input type="text" value="Жак-Ив Кусто" class="popup__input" name="form1__name">
+            <input type="text" value="Исследователь океана" class="popup__input" name="form1__status">
+            <button class="popup__button" type="submit">Сохранить</button>
+            <button class="popup__close" type="button"></button>
+         </form>
+      </section>
+      <script src="./scripts/index.js"></script>
+   </body>
 </html>
