Редактирование секции Elements
Удалил карточки из разметки хтмл и сделал их через массив js

--- a/index.html
+++ b/index.html
@@ -27,48 +27,15 @@
                <button class="profile__button" type="button"></button>
             </section>
             <section class="elements">
-               <div class="elements__card">
-                  <img src="./images/elements/card1.jpg" alt="Санкт-Петербург" class="elements__image">
-                  <div class="elements__signature">
-                     <h2 class="elements__title">Санкт-Петербург</h2>
-                     <button class="elements__like" type="button"></button>
+               <template class="elements__template">
+                  <div class="elements__card">
+                     <img src="#" alt="Санкт-Петербург" class="elements__image">
+                     <div class="elements__signature">
+                        <h2 class="elements__title">Санкт-Петербург</h2>
+                        <button class="elements__like" type="button"></button>
+                     </div>
                   </div>
-               </div>
-               <div class="elements__card">
-                  <img src="./images/elements/card2.jpg" alt="Москва" class="elements__image">
-                  <div class="elements__signature">
-                     <h2 class="elements__title">Москва</h2>
-                     <button class="elements__like" type="button"></button>
-                  </div>
-               </div>
-               <div class="elements__card">
-                  <img src="./images/elements/card3.jpg" alt="Нижний Новгород" class="elements__image">
-                  <div class="elements__signature">
-                     <h2 class="elements__title">Нижний Новгород</h2>
-                     <button class="elements__like" type="button"></button>
-                  </div>
-               </div>
-               <div class="elements__card">
-                  <img src="./images/elements/card4.jpg" alt="Сочи" class="elements__image">
-                  <div class="elements__signature">
-                     <h2 class="elements__title">Сочи</h2>
-                     <button class="elements__like" type="button"></button>
-                  </div>
-               </div>
-               <div class="elements__card">
-                  <img src="./images/elements/card5.jpg" alt="Домбай" class="elements__image">
-                  <div class="elements__signature">
-                     <h2 class="elements__title">Домбай</h2>
-                     <button class="elements__like" type="button"></button>
-                  </div>
-               </div>
-               <div class="elements__card">
-                  <img src="./images/elements/card6.jpg" alt="Альпы" class="elements__image">
-                  <div class="elements__signature">
-                     <h2 class="elements__title">Альпы</h2>
-                     <button class="elements__like" type="button"></button>
-                  </div>
-               </div>
+               </template>
             </section>
          </main>
          <footer class="footer">
