--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
             <button class="popup__close" type="button"></button>
          </form>
       </section>
+      <section class="popupduble">
+         <form class="popupduble__container" name="form2">
+            <h3 class="popupduble__title">Новое место</h3>
+            <input type="text" value="Название" class="popupduble__input" name="form2__name">
+            <input type="text" value="Ссылка на картинку" class="popupduble__input" name="form2__status">
+            <button class="popupduble__button" type="submit">Создать</button>
+            <button class="popupduble__close" type="button"></button>
+         </form>
+      </section>
       <script src="./scripts/index.js"></script>
    </body>
 </html>
