--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             <section class="elements">
                <template class="elements__template">
                   <div class="elements__card">
-                     <img src="#" alt="Санкт-Петербург" class="elements__image">
+                     <img src="./images/elements/card1.jpg" alt="Фотография места" class="elements__image">
                      <div class="elements__signature">
-                        <h2 class="elements__title">Санкт-Петербург</h2>
+                        <h2 class="elements__title"></h2>
                         <button class="elements__like" type="button"></button>
                      </div>
                   </div>
