--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                         <h2 class="elements__title"></h2>
                         <button class="elements__like" type="button"></button>
                      </div>
+                     <button class="elements__delete" type="button"></button>
                   </div>
                </template>
             </section>
