--- a/index.html
+++ b/index.html
@@ -48,21 +48,23 @@
             <div class="popup__conteiner">
                <h3 class="popup__title">Редактировать профиль</h3>
                <form name="form1" class="form" novalidate>
-                  <input type="text" placeholder="Имя" value="" class="popup__input form__input" name="form1__name" id="name-input" required minlength="7">
-                  <span class="form__input-error name-input-error" ></span>
-                  <input type="text" placeholder="Статус" value="" class="popup__input form__input" name="form1__status" id="status-input" required minlength="7">
-                  <span class="form__input-error status-input-error" ></span>
+                  <input type="text" placeholder="Имя" value="Никита Апатенко" class="popup__input" name="form1__name" id="name-input" minlength="2" maxlength="40" required>
+                  <span class="form__input-error name-input-error"></span>
+                  <input type="text" placeholder="О себе" value="Пытающийся понять код" class="popup__input popup__about-me" name="form1__status" id="status-input" minlength="2" maxlength="200" required>
+                  <span class="form__input-error status-input-error"></span>
                   <button class="popup__button" type="submit">Сохранить</button>
                </form>
                <button class="popup__close" type="button"></button>
             </div>
          </div>
-         <!-- <div class="popup popup_type_card">
+         <div class="popup popup_type_card">
             <div class="popup__conteiner">
                <h3 class="popup__title">Новое место</h3>
-               <form name="form2">
-                  <input type="text" value="" placeholder="Название" class="popup__input" name="form2__name">
-                  <input type="url" value="" placeholder="Ссылка на картину" class="popup__input" name="form2__status">
+               <form name="form2" class="form" novalidate>
+                  <input type="text" value="" placeholder="Название" class="popup__input" name="form2__name" id="card-input" minlength="2" maxlength="30" required>
+                  <span class="form__input-error card-input-error"></span>
+                  <input type="url" value="" placeholder="Ссылка на картину" class="popup__input popup__about-me" name="form2__status" id="url-input" required>
+                  <span class="form__input-error url-input-error"></span>
                   <button class="popup__button" type="submit">Создать</button>
                </form>
                <button class="popup__close" type="button"></button>
@@ -74,9 +76,9 @@
             <h3 class="popup__description">Великолепный лес</h3>
             <button type="button" class="popup__close"></button>
             </div>
-         </div> -->
+         </div>
       </section>
-      <script src="./scripts/index.js"></script>
       <script src="./scripts/validate.js"></script>
+      <script src="./scripts/index.js"></script>
    </body>
 </html>
