решены проблемы с контейнером

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="popup__conteiner">
                <h3 class="popup__title">Редактировать профиль</h3>
                <form name="form1" class="form" novalidate>
-                  <input type="text" placeholder="Имя" value="Никита Апатенко" class="popup__input" name="form1__name" id="name-input" minlength="2" maxlength="40" required>
+                  <input type="text" placeholder="Имя" value="Никита Апатенко" class="popup__input form__input_type_error" name="form1__name" id="name-input" minlength="2" maxlength="40" required>
                   <span class="form__input-error name-input-error"></span>
                   <input type="text" placeholder="О себе" value="Пытающийся понять код" class="popup__input popup__about-me" name="form1__status" id="status-input" minlength="2" maxlength="200" required>
                   <span class="form__input-error status-input-error"></span>
